# alpacka-app

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  packages.rs  query_syntax.rs  util.rs  vercmp.rs
src/app/: ui.rs
src/app/ui/: cmd.rs  ico.rs  paint_util.rs  tabs.rs
src/app/ui/tabs/: color_theme.rs  local_pkg_list.rs  package.rs  remote_pkg_list.rs  upgrade_list.rs
