[package]
name = "alpacka-app"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
dirs = "6.0.0"
eframe = "0.32.0"
egui_colors = "0.9"
egui_dock = "0.17.0"
egui_extras = "0.32.0"
humansize = "2.1.3"
ron = "0.10"
serde.version = "1"
serde.features = ["derive"]
smol_str = "0.3.2"
alpacka.git = "https://github.com/crumblingstatue/libalpacka.git"
difference = "2"
pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "as-raw-fd-pty-ref" }
ansi_term_buf = "0.1.0"
nonblock = "0.2.0"
#egui_logger = "0.7.0"
egui_logger.git = "https://github.com/RegenJacob/egui_logger.git"
egui_logger.rev = "696f2d1af99105810957d97efc1059e83e517ee5"
log = "0.4.27"

[profile.release]
panic = "abort"
lto = "thin"
strip = "symbols"
